# pwow-des

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
actuals/: classification_ontology_hauling.yaml  classification_ontology_loading.yaml  hauling_work_order_data_batch_id.txt  hauling_work_order_data_batch_input.jsonl  hauling_work_order_data_batch_output.jsonl  loading_work_order_data_batch_id.txt  loading_work_order_data_batch_input.jsonl  loading_work_order_data_batch_output.jsonl
engine/: pyproject.toml
engine/docs/: api.md  architecture.md
engine/examples/: INDEX.md  README.md  anyof_timeout_demo.py  blender_import_timeline.py  carwash.py  clock_demo.py  (+15 more)
fitting/: pyproject.toml
fitting/output/: fitted_config.py
fitting/src/fitting/: __init__.py  __main__.py  duration_fit.py  export_config.py  ift.py  load.py  weibull_fit.py
fitting/tests/: test_fitting.py
notebooks/: test.ipynb
output/: events.csv  fitted_config.py  fleet_summary.csv  truck_summary.csv
simulation/: pyproject.toml
simulation/concept/: mining_fleet_des_concept.md
simulation/src/simulation/: __init__.py  config.py  export.py  fleet.py  shift.py  shovel.py  sim.py  stats.py  truck.py  utilisation.py
simulation/tests/: test_phase1.py  test_phase2.py  test_phase3.py
tasks/: 001_scaffold_simulation.md  002_phase2_fleet_contention.md  003_phase3_shovels.md  004_actuals_fitting.md  005_sim_activity_group_refactor.md
tools/: classify_work_orders.py
(+65 files in other folders)
