[project]
name = "simulation"
version = "0.1.0"
description = "Mining fleet availability DES simulation."
requires-python = ">=3.11"
dependencies = ["engine", "numpy"]

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "simulation"
source-dir = "src"
